fix: keep updater compatible with older Android runtimes